--- a/www/css/index.css
+++ b/www/css/index.css
@@ -35,7 +35,7 @@
   display: block !important;
   margin-left: auto !important;
   margin-right: auto !important;
-  margin-top: 12%;
+  margin-top: 10%;
   width: 200px !important;
 }
 
@@ -68,32 +68,43 @@
   font-family: 'fido';
 }
 
-#question{
+.questionClass{
   margin-left: 10px;
   margin-right: 10px;
   font-family: 'fido';
-  font-size:18px;
-  padding-top: 15%;
-  padding-bottom: 10%;
+  font-size:22px;
   display: none;
   height:200px;
   vertical-align: middle;
+  line-height: 200px;
+}
+.questionClass span {
+  display: inline-block;
+  vertical-align: middle;
+  line-height: normal;      
 }
 .answer{
-  margin-left: 10px;
-  margin-right: 10px;
   font-family: 'Verdana';
-  font-size:8px;
-  margin-bottom: 5%; 
+  font-size:11px;
+  margin-bottom: 10px; 
   vertical-align: middle;
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
   height: 40px;
+  width: 300px;
+  margin-right: auto;
+  margin-left: auto;
   color: white;
   background-color: black;
-  line-height: 5;
   border-radius: 10px;
+  word-wrap: break-word;
+  padding-left:10px;
+  padding-right:10px;
+  line-height: 32px;
+}
+
+.answer span {
+  display: inline-block;
+  vertical-align: middle;
+  line-height: normal;      
 }
 
 #go{
