--- a/www/css/index.css
+++ b/www/css/index.css
@@ -136,12 +136,15 @@
 }
 
 #rightQuestion{
-  margin-top: 50px;
-  font-size: 22px;
+  margin-top: 30px;
+  font-size: 20px;
   font-family: Verdana;
+  padding-left:10px;
+  padding-right:10px;
 }
 
 #rightAnswer{
-  margin-top: 50px;
+  margin-top: 30px;
+  margin-bottom: 50px;
   font-size: 24px;
 }
